--- a/src/features/home/components/SearchTravelSection/SearchTravelSection.module.scss
+++ b/src/features/home/components/SearchTravelSection/SearchTravelSection.module.scss
@@ -114,7 +114,7 @@
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1279px) {
+@media screen and (min-width: 768px) and (max-width: 1280px) {
   .searchTravelSection {
     padding: 150px 0 230px 0;
 
