--- a/src/features/page/components/MobileMenu/MobileMenu.module.scss
+++ b/src/features/page/components/MobileMenu/MobileMenu.module.scss
@@ -365,7 +365,7 @@
     
     .menuIcon {
       cursor: pointer;
-      margin-left: 12px;
+      // margin-left: 12px;
       border: 1px solid #ffffff;
       border-radius: 50%;
       text-align: center;
