--- a/src/features/page/components/SelectMenu/SelectMenu.module.scss
+++ b/src/features/page/components/SelectMenu/SelectMenu.module.scss
@@ -142,3 +142,9 @@
     }
   }
 }
+
+@media screen and (min-width: 768px) and (max-width: 810px) {
+  .headerSelectMenu {
+    margin-right: 0;
+  }
+}
